fix(modal-navigation): fixed invisible menu

--- a/app/client/stylesheets/components/pu-page.sass
+++ b/app/client/stylesheets/components/pu-page.sass
@@ -93,10 +93,12 @@
         display: block
         width: 100%
         margin-bottom: 20px
-        overflow: hidden
 
         .pu-wrap
             position: relative
+
+        @media screen and (max-width: $breakpoint-desktop)
+            overflow: hidden
 
     > .pu-spinner
         display: block
